--- a/website/content/community/index.html
+++ b/website/content/community/index.html
@@ -167,11 +167,14 @@ under the License. -->
         <li>Dave Barnes</li>
         <li>Dave Muirhead</li>
         <li>David Yozie</li>
+        <li>Deepak Dixit</li>
         <li>Dick Cavender</li>
         <li>Edin Zulich</li>
 			</div>
 			<div class="col-md-2">
+        <li>Ernest Burghardt</li>
         <li>Eric Shu</li>
+        <li>Galen O’Sullivan</li>
         <li>Gideon Low</li>
         <li>Greg Chase</li>
         <li>Hemant Bhanawat</li>
@@ -185,6 +188,7 @@ under the License. -->
         <li>Jens Deppe</li>
         <li>Jianxia Chen</li>
         <li>Jinmei Liao</li>
+        <li>Joey McAllister</li>
         <li>John Blum</li>
         <li>Justin Erenkrantz</li>
         <li>Karen Smoler Miller</li>
@@ -192,10 +196,10 @@ under the License. -->
         <li>Ketan Deshpande</li>
         <li>Kevin Duling</li>
         <li>Kirk Lund</li>
-        <li>Kishor Bachhav</li>
-        <li>Konstantin Boudnik</li>
 			</div>
 			<div class="col-md-2">
+        <li>Kishor Bachhav</li>
+        <li>Konstantin Boudnik</li>
         <li>Konstantin Ignatyev</li>
         <li>Lise Storc</li>
         <li>Luke Shannon</li>
@@ -218,9 +222,9 @@ under the License. -->
         <li>Severine Tymon</li>
         <li>Shatarupa Nandi</li>
         <li>Shirish Deshmukh</li>
-        <li>Sonal Agarwal</li>
 			</div>
 			<div class="col-md-2">
+        <li>Sonal Agarwal</li>
         <li>Soubhik Chakraborty</li>
         <li>Sourabh Bansod</li>
         <li>Stephane Maldini</li>
