--- a/community/index.html
+++ b/community/index.html
@@ -333,15 +333,26 @@ under the License. -->
 		</div>
     <div class="row">
       <div class="col-md-4">
+        <a href="https://springoneplatform.io/geode"><img src="/img/s1p.png" /></a>
+        <h3>San Francisco | December 4-7th 2017</h3>
+        <p>Build software people love at SpringOne Platform - the premier conference
+          for those who build, deploy, and run cloud-native software.  This year's
+          conference features a set of sessions to bring together the Apache Geode
+          community.</p>
+      </div>
+      <!-- remove this as it's out of date
+      <div class="col-md-4">
         <a  href="http://www.apache.org/events/current-event.html">
           <img src="http://www.apache.org/events/current-event-234x60.png"/>
         </a>
       </div>
+      -->
     	<div class="col-md-4">
     	    	<h3>Watch this space for upcoming Apache Geode events!</h3>
               <p><i>Want to organize an event? Subscribe to the Apache Geode Users list by sending a blank email to<br/><a href="mailto:user-subscribe@geode.apache.org">user-subscribe@geode.apache.org</a>, then email the list with your event idea!</i>
               </p>
       </div>
+
     </div>
 	</div>
 </section>
@@ -354,17 +365,13 @@ under the License. -->
 			</div>
 		</div>
 		<div class="row">
-    	<div class="col-md-4">
-    	    	<h3><a target="_blank" href="http://s.apache.org/geodechat">HipChat</a></h3>
-    	    	<p>Some of the Geode team hangs around this HipChat Room: <a href="http://s.apache.org/geodechat" target="_blank">http://s.apache.org/geodechat</a><p>
-		  </div>
       <div class="col-md-4">
         	<h3><a target="_blank" href="http://stackoverflow.com/search?q=Apache%20Geode">StackOverflow</a></h3>
         	<p>The Geode team is always ready to answer questions on <a href="http://stackoverflow.com/search?q=Apache%20Geode">StackOverflow</a><p>
       </div>
       <div class="col-md-4">
         	<h3><a target="_blank" href="https://www.youtube.com/channel/UCaY2q0UlWjAgEGL7uhCLs6A">Geode ClubHouse</a></h3>
-        	<p>We meet every 15 days online for discussions around specific features, detailing internals and discuss on-going issues on JIRA at the Geode Clubhouse. All meetings are recorded and videos are available in our <a href="https://www.youtube.com/channel/UCaY2q0UlWjAgEGL7uhCLs6A">YouTube</a> channel.<p>
+        	<p>We meet periodically online for discussions around specific features, detailing internals and discuss on-going issues on JIRA at the Geode Clubhouse. All meetings are recorded and videos are available in our <a href="https://www.youtube.com/channel/UCaY2q0UlWjAgEGL7uhCLs6A">YouTube</a> channel.<p>
       </div>
 	  </div>
 </section>
