--- a/releases/index.html
+++ b/releases/index.html
@@ -131,6 +131,59 @@ under the License. -->
       <!-- RELEASES -->
       <div class="container">
 
+        <!-- START OF 1.2.1-->
+        <h3><span class="icon-flag-checkered"> 1.2.1</span></h3>
+        <!-- RELEASE NOTES -->
+        <strong><a href="https://cwiki.apache.org/confluence/display/GEODE/Release+Notes#ReleaseNotes-1.2.1">Release Notes</a></strong>
+        <p/>
+
+        <!-- BINARY -->
+        <span class="icon-cloud-download"> <strong>Binaries </strong>
+          [ <a href="http://apache.org/dyn/closer.cgi/geode/1.2.1/apache-geode-1.2.1.zip">ZIP</a>, <a href="https://dist.apache.org/repos/dist/release/geode/1.2.1/apache-geode-1.2.1.zip.sha256">SHA-256</a>,
+          <a href="https://dist.apache.org/repos/dist/release/geode/1.2.1/apache-geode-1.2.1.zip.asc">PGP</a> ] -
+          [<a href="http://apache.org/dyn/closer.cgi/geode/1.2.1/apache-geode-1.2.1.tar.gz">TAR.GZ</a>, <a href="https://dist.apache.org/repos/dist/release/geode/1.2.1/apache-geode-1.2.1.tar.gz.sha256">SHA-256</a>,
+          <a href="https://dist.apache.org/repos/dist/release/geode/1.2.1/apache-geode-1.2.1.tar.gz.asc">PGP</a> ]
+        </span><br/>
+        <!-- SOURCE -->
+        <span class="icon-cloud-download"> <strong>Source</strong>
+           [ <a href="http://apache.org/dyn/closer.cgi/geode/1.2.1/apache-geode-src-1.2.1.zip">ZIP</a>, <a href="https://dist.apache.org/repos/dist/release/geode/1.2.1/apache-geode-src-1.2.1.zip.sha256">SHA-256</a>,
+           <a href="https://dist.apache.org/repos/dist/release/geode/1.2.1/apache-geode-src-1.2.1.zip.asc">PGP</a>
+            ] -
+           [<a href="http://apache.org/dyn/closer.cgi/geode/1.2.1/apache-geode-src-1.2.1.tar.gz">TAR.GZ</a>, <a href="https://dist.apache.org/repos/dist/release/geode/1.2.1/apache-geode-src-1.2.1.tar.gz.sha256">SHA-256</a>,
+           <a href="https://dist.apache.org/repos/dist/release/geode/1.2.1/apache-geode-src-1.2.1.tar.gz.asc">PGP</a>
+           ]
+         </span><br/>
+        <!-- Examples -->
+        <span class="icon-cloud-download"> <strong>Examples</strong>
+           [ <a href="http://apache.org/dyn/closer.cgi/geode/1.2.1/apache-geode-examples-1.2.1.zip">ZIP</a>, <a href="https://dist.apache.org/repos/dist/release/geode/1.2.1/apache-geode-examples-1.2.1.zip.sha256">SHA-256</a>,
+           <a href="https://dist.apache.org/repos/dist/release/geode/1.2.1/geode-examples-1.2.1.zip.asc">PGP</a>
+            ] -
+           [<a href="http://apache.org/dyn/closer.cgi/geode/1.2.1/apache-geode-examples-1.2.1.tar.gz">TAR.GZ</a>, <a href="https://dist.apache.org/repos/dist/release/geode/1.2.1/apache-geode-examples-1.2.1.tar.gz.sha256">SHA-256</a>,
+           <a href="https://dist.apache.org/repos/dist/release/geode/1.2.1/apache-geode-examples-1.2.1.tar.gz.asc">PGP</a>
+           ]
+         </span><br/>
+
+        <!-- DEPENDENCY MANAGERS -->
+        <div class="container">
+          <strong>Gradle</strong>
+<pre class="prettyprint">
+  dependencies {
+      compile 'org.apache.geode:geode-core:1.2.1'
+  }
+</pre>
+          <strong>Maven</strong>
+<pre class="prettyprint">
+  &lt;dependencies&gt;
+     &lt;dependency&gt;
+        &lt;groupId&gt;org.apache.geode&lt;/groupId&gt;
+        &lt;artifactId&gt;geode-core&lt;/artifactId&gt;
+        &lt;version&gt;1.2.1&lt;/version&gt;
+     &lt;/dependency&gt;
+  &lt;/dependencies&gt;
+</pre>
+        </div>
+        <!-- END OF 1.2.1 -->
+
         <!-- START OF 1.2.0 -->
         <h3><span class="icon-flag-checkered"> 1.2.0</span></h3>
         <!-- RELEASE NOTES -->
@@ -226,49 +279,6 @@ under the License. -->
 </pre>
         </div>
         <!-- END OF 1.1.1 -->
-        <!-- START OF 1.1 -->
-        <h3><span class="icon-flag-checkered"> 1.1.0</span></h3>
-        <!-- RELEASE NOTES -->
-        <strong><a href="https://cwiki.apache.org/confluence/display/GEODE/Release+Notes#ReleaseNotes-1.1.0">Release Notes</a></strong>
-        <p/>
-
-        <!-- BINARY -->
-        <span class="icon-cloud-download"> <strong>Binaries </strong>
-          [ <a href="http://apache.org/dyn/closer.cgi/geode/1.1.0/apache-geode-1.1.0.zip">ZIP</a>, <a href="https://dist.apache.org/repos/dist/release/geode/1.1.0/apache-geode-1.1.0.zip.sha256">SHA-256</a>,
-          <a href="https://dist.apache.org/repos/dist/release/geode/1.1.0/apache-geode-1.1.0.zip.asc">PGP</a> ] -
-          [<a href="http://apache.org/dyn/closer.cgi/geode/1.1.0/apache-geode-1.1.0.tar.gz">TAR.GZ</a>, <a href="https://dist.apache.org/repos/dist/release/geode/1.1.0/apache-geode-1.1.0.tar.gz.sha256">SHA-256</a>,
-          <a href="https://dist.apache.org/repos/dist/release/geode/1.1.0/apache-geode-1.1.0.tar.gz.asc">PGP</a> ]
-        </span><br/>
-        <!-- SOURCE -->
-        <span class="icon-cloud-download"> <strong>Source</strong>
-           [ <a href="http://apache.org/dyn/closer.cgi/geode/1.1.0/apache-geode-src-1.1.0.zip">ZIP</a>, <a href="https://dist.apache.org/repos/dist/release/geode/1.1.0/apache-geode-src-1.1.0.zip.sha256">SHA-256</a>,
-           <a href="https://dist.apache.org/repos/dist/release/geode/1.1.0/apache-geode-src-1.1.0.zip.asc">PGP</a>
-            ] -
-           [<a href="http://apache.org/dyn/closer.cgi/geode/1.1.0/apache-geode-src-1.1.0.tar.gz">TAR.GZ</a>, <a href="https://dist.apache.org/repos/dist/release/geode/1.1.0/apache-geode-src-1.1.0.tar.gz.sha256">SHA-256</a>,
-           <a href="https://dist.apache.org/repos/dist/release/geode/1.1.0/apache-geode-src-1.1.0.tar.gz.asc">PGP</a>
-           ]
-         </span>
-
-        <!-- DEPENDENCY MANAGERS -->
-        <div class="container">
-          <strong>Gradle</strong>
-<pre class="prettyprint">
-  dependencies {
-      compile 'org.apache.geode:geode-core:1.1.0'
-  }
-</pre>
-          <strong>Maven</strong>
-<pre class="prettyprint">
-  &lt;dependencies&gt;
-     &lt;dependency&gt;
-        &lt;groupId&gt;org.apache.geode&lt;/groupId&gt;
-        &lt;artifactId&gt;geode-core&lt;/artifactId&gt;
-        &lt;version&gt;1.1.0&lt;/version&gt;
-     &lt;/dependency&gt;
-  &lt;/dependencies&gt;
-</pre>
-        </div>
-        <!-- END OF 1.1 -->
       </div>
       <p>If you need access to older releases they can be found in the <a href="https://archive.apache.org/dist/incubator/geode/">release archives</a>.</p>
       <!-- END OF RELEASE -->
