--- a/website/content/community/index.html
+++ b/website/content/community/index.html
@@ -42,7 +42,7 @@ under the License. -->
 		<div class="row">
 	    	<div class="col-md-4">
 	    		<h3>Users</h3>
-	    		<p><em>Perfect if you build apps against Apache Geode or deploy Apache Geode.</em></p>
+	    		<p><em>Perfect if you build apps against Apache Geode or deploy Apache Geode, and a great place to start if you have a question.</em></p>
 	    		<p>To subscribe, send a blank email to<br/><a href="mailto:user-subscribe@geode.apache.org">user-subscribe@geode.apache.org</a>.</p>
 	    		<p>You can also <a href="http://markmail.org/search/?q=list%3Aorg.apache.geode.user+order%3Adate-backward">read the archives</a>.</p>
 			</div>
