--- a/releases/index.html
+++ b/releases/index.html
@@ -109,12 +109,12 @@ KIND, either express or implied.  See the License for the
 specific language governing permissions and limitations
 under the License. -->
 
-<section class="bf-releases">
+<section class="bf-tagline">
     <div class="container">
     	<div class="row">
-    	    <div class="col-md-12" id="events">
-    	    	<h2><span class="icon-releases"></span></h2>
-			</div>
+          <br />
+    	    	<h2>Apache Geode Releases</h2>
+    		<p>Releases of Geode are made available to the general public at no charge, under the <a href="http://apache.org/licenses/">Apache License</a>, in both binary and source distributions.  Binary downloads are provided for the convenience of our users and are not official Apache Geode releases.</p>
 		</div>
 	</div>
 </section>
@@ -123,11 +123,61 @@ under the License. -->
     <div class="container">
       <div class="row">
     		<div class="col-md-9">
-    			<p>
-				Releases of Geode are made available to the general public at no charge, under the <a href="http://apache.org/licenses/">Apache License</a>, in both binary and source distributions.  Binary downloads are provided for the convenience of our users and are not official Apache Geode releases.
-				  </p>
       <!-- RELEASES -->
       <div class="container">
+
+        <!-- START OF 1.3.0-->
+        <h3>1.3.0</h3>
+        <!-- RELEASE NOTES -->
+        <strong><a href="https://cwiki.apache.org/confluence/display/GEODE/Release+Notes">Release Notes</a></strong>
+        <p/>
+
+        <!-- BINARY -->
+        <span class="icon-cloud-download"> <strong>Binaries </strong>
+          [ <a href="http://apache.org/dyn/closer.cgi/geode/1.3.0/apache-geode-1.3.0.zip">ZIP</a>, <a href="https://dist.apache.org/repos/dist/release/geode/1.3.0/apache-geode-1.3.0.zip.sha256">SHA-256</a>,
+          <a href="https://dist.apache.org/repos/dist/release/geode/1.3.0/apache-geode-1.3.0.zip.asc">PGP</a> ] -
+          [<a href="http://apache.org/dyn/closer.cgi/geode/1.3.0/apache-geode-1.3.0.tgz">TGZ</a>, <a href="https://dist.apache.org/repos/dist/release/geode/1.3.0/apache-geode-1.3.0.tgz.sha256">SHA-256</a>,
+          <a href="https://dist.apache.org/repos/dist/release/geode/1.3.0/apache-geode-1.3.0.tgz.asc">PGP</a> ]
+        </span><br/>
+        <!-- SOURCE -->
+        <span class="icon-cloud-download"> <strong>Source</strong>
+           [ <a href="http://apache.org/dyn/closer.cgi/geode/1.3.0/apache-geode-1.3.0-src.zip">ZIP</a>, <a href="https://dist.apache.org/repos/dist/release/geode/1.3.0/apache-geode-1.3.0-src.zip.sha256">SHA-256</a>,
+           <a href="https://dist.apache.org/repos/dist/release/geode/1.3.0/apache-geode-1.3.0-src.zip.asc">PGP</a>
+            ] -
+           [<a href="http://apache.org/dyn/closer.cgi/geode/1.3.0/apache-geode-1.3.0-src.tgz">TGZ</a>, <a href="https://dist.apache.org/repos/dist/release/geode/1.3.0/apache-geode-1.3.0-src.tgz.sha256">SHA-256</a>,
+           <a href="https://dist.apache.org/repos/dist/release/geode/1.3.0/apache-geode-1.3.0-src.tgz.asc">PGP</a>
+           ]
+         </span><br/>
+        <!-- Examples -->
+        <span class="icon-cloud-download"> <strong>Examples</strong>
+           [ <a href="http://apache.org/dyn/closer.cgi/geode/1.3.0/apache-geode-examples-1.3.0.zip">ZIP</a>, <a href="https://dist.apache.org/repos/dist/release/geode/1.3.0/apache-geode-examples-1.3.0.zip.sha256">SHA-256</a>,
+           <a href="https://dist.apache.org/repos/dist/release/geode/1.3.0/apache-geode-examples-1.3.0.zip.asc">PGP</a>
+            ] -
+           [<a href="http://apache.org/dyn/closer.cgi/geode/1.3.0/apache-geode-examples-1.3.0.tar.gz">TAR.GZ</a>, <a href="https://dist.apache.org/repos/dist/release/geode/1.3.0/apache-geode-examples-1.3.0.tar.gz.sha256">SHA-256</a>,
+           <a href="https://dist.apache.org/repos/dist/release/geode/1.3.0/apache-geode-examples-1.3.0.tar.gz.asc">PGP</a>
+           ]
+         </span><br/>
+
+        <!-- DEPENDENCY MANAGERS -->
+        <div class="container">
+          <strong>Gradle</strong>
+<pre class="prettyprint">
+  dependencies {
+      compile 'org.apache.geode:geode-core:1.3.0'
+  }
+</pre>
+          <strong>Maven</strong>
+<pre class="prettyprint">
+  &lt;dependencies&gt;
+     &lt;dependency&gt;
+        &lt;groupId&gt;org.apache.geode&lt;/groupId&gt;
+        &lt;artifactId&gt;geode-core&lt;/artifactId&gt;
+        &lt;version&gt;1.3.0&lt;/version&gt;
+     &lt;/dependency&gt;
+  &lt;/dependencies&gt;
+</pre>
+        </div>
+        <!-- END OF 1.3.0 -->
 
         <!-- START OF 1.2.1-->
         <h3><span class="icon-flag-checkered"> 1.2.1</span></h3>
@@ -154,7 +204,7 @@ under the License. -->
         <!-- Examples -->
         <span class="icon-cloud-download"> <strong>Examples</strong>
            [ <a href="http://apache.org/dyn/closer.cgi/geode/1.2.1/apache-geode-examples-1.2.1.zip">ZIP</a>, <a href="https://dist.apache.org/repos/dist/release/geode/1.2.1/apache-geode-examples-1.2.1.zip.sha256">SHA-256</a>,
-           <a href="https://dist.apache.org/repos/dist/release/geode/1.2.1/geode-examples-1.2.1.zip.asc">PGP</a>
+           <a href="https://dist.apache.org/repos/dist/release/geode/1.2.1/apache-geode-examples-1.2.1.zip.asc">PGP</a>
             ] -
            [<a href="http://apache.org/dyn/closer.cgi/geode/1.2.1/apache-geode-examples-1.2.1.tar.gz">TAR.GZ</a>, <a href="https://dist.apache.org/repos/dist/release/geode/1.2.1/apache-geode-examples-1.2.1.tar.gz.sha256">SHA-256</a>,
            <a href="https://dist.apache.org/repos/dist/release/geode/1.2.1/apache-geode-examples-1.2.1.tar.gz.asc">PGP</a>
