--- a/website/content/releases/index.html
+++ b/website/content/releases/index.html
@@ -42,14 +42,14 @@ under the License. -->
         <p/>
 
         <!-- BINARY -->
-        <span class="icon-cloud-download"> <strong>Binaries </strong>
+        <span> <strong>Binaries </strong>
           [ <a href="http://apache.org/dyn/closer.cgi/geode/1.3.0/apache-geode-1.3.0.zip">ZIP</a>, <a href="https://dist.apache.org/repos/dist/release/geode/1.3.0/apache-geode-1.3.0.zip.sha256">SHA-256</a>,
           <a href="https://dist.apache.org/repos/dist/release/geode/1.3.0/apache-geode-1.3.0.zip.asc">PGP</a> ] -
           [<a href="http://apache.org/dyn/closer.cgi/geode/1.3.0/apache-geode-1.3.0.tgz">TGZ</a>, <a href="https://dist.apache.org/repos/dist/release/geode/1.3.0/apache-geode-1.3.0.tgz.sha256">SHA-256</a>,
           <a href="https://dist.apache.org/repos/dist/release/geode/1.3.0/apache-geode-1.3.0.tgz.asc">PGP</a> ]
         </span><br/>
         <!-- SOURCE -->
-        <span class="icon-cloud-download"> <strong>Source</strong>
+        <span> <strong>Source</strong>
            [ <a href="http://apache.org/dyn/closer.cgi/geode/1.3.0/apache-geode-1.3.0-src.zip">ZIP</a>, <a href="https://dist.apache.org/repos/dist/release/geode/1.3.0/apache-geode-1.3.0-src.zip.sha256">SHA-256</a>,
            <a href="https://dist.apache.org/repos/dist/release/geode/1.3.0/apache-geode-1.3.0-src.zip.asc">PGP</a>
             ] -
@@ -58,7 +58,7 @@ under the License. -->
            ]
          </span><br/>
         <!-- Examples -->
-        <span class="icon-cloud-download"> <strong>Examples</strong>
+        <span> <strong>Examples</strong>
            [ <a href="http://apache.org/dyn/closer.cgi/geode/1.3.0/apache-geode-examples-1.3.0.zip">ZIP</a>, <a href="https://dist.apache.org/repos/dist/release/geode/1.3.0/apache-geode-examples-1.3.0.zip.sha256">SHA-256</a>,
            <a href="https://dist.apache.org/repos/dist/release/geode/1.3.0/apache-geode-examples-1.3.0.zip.asc">PGP</a>
             ] -
@@ -89,20 +89,20 @@ under the License. -->
         <!-- END OF 1.3.0 -->
 
         <!-- START OF 1.2.1-->
-        <h3><span class="icon-flag-checkered"> 1.2.1</span></h3>
+        <h3>1.2.1</h3>
         <!-- RELEASE NOTES -->
         <strong><a href="https://cwiki.apache.org/confluence/display/GEODE/Release+Notes#ReleaseNotes-1.2.1">Release Notes</a></strong>
         <p/>
 
         <!-- BINARY -->
-        <span class="icon-cloud-download"> <strong>Binaries </strong>
+        <span> <strong>Binaries </strong>
           [ <a href="http://apache.org/dyn/closer.cgi/geode/1.2.1/apache-geode-1.2.1.zip">ZIP</a>, <a href="https://dist.apache.org/repos/dist/release/geode/1.2.1/apache-geode-1.2.1.zip.sha256">SHA-256</a>,
           <a href="https://dist.apache.org/repos/dist/release/geode/1.2.1/apache-geode-1.2.1.zip.asc">PGP</a> ] -
           [<a href="http://apache.org/dyn/closer.cgi/geode/1.2.1/apache-geode-1.2.1.tar.gz">TAR.GZ</a>, <a href="https://dist.apache.org/repos/dist/release/geode/1.2.1/apache-geode-1.2.1.tar.gz.sha256">SHA-256</a>,
           <a href="https://dist.apache.org/repos/dist/release/geode/1.2.1/apache-geode-1.2.1.tar.gz.asc">PGP</a> ]
         </span><br/>
         <!-- SOURCE -->
-        <span class="icon-cloud-download"> <strong>Source</strong>
+        <span> <strong>Source</strong>
            [ <a href="http://apache.org/dyn/closer.cgi/geode/1.2.1/apache-geode-src-1.2.1.zip">ZIP</a>, <a href="https://dist.apache.org/repos/dist/release/geode/1.2.1/apache-geode-src-1.2.1.zip.sha256">SHA-256</a>,
            <a href="https://dist.apache.org/repos/dist/release/geode/1.2.1/apache-geode-src-1.2.1.zip.asc">PGP</a>
             ] -
@@ -111,7 +111,7 @@ under the License. -->
            ]
          </span><br/>
         <!-- Examples -->
-        <span class="icon-cloud-download"> <strong>Examples</strong>
+        <span> <strong>Examples</strong>
            [ <a href="http://apache.org/dyn/closer.cgi/geode/1.2.1/apache-geode-examples-1.2.1.zip">ZIP</a>, <a href="https://dist.apache.org/repos/dist/release/geode/1.2.1/apache-geode-examples-1.2.1.zip.sha256">SHA-256</a>,
            <a href="https://dist.apache.org/repos/dist/release/geode/1.2.1/apache-geode-examples-1.2.1.zip.asc">PGP</a>
             ] -
@@ -142,20 +142,20 @@ under the License. -->
         <!-- END OF 1.2.1 -->
 
         <!-- START OF 1.2.0 -->
-        <h3><span class="icon-flag-checkered"> 1.2.0</span></h3>
+        <h3>1.2.0</span></h3>
         <!-- RELEASE NOTES -->
         <strong><a href="https://cwiki.apache.org/confluence/display/GEODE/Release+Notes#ReleaseNotes-1.2.0">Release Notes</a></strong>
         <p/>
 
         <!-- BINARY -->
-        <span class="icon-cloud-download"> <strong>Binaries </strong>
+        <span> <strong>Binaries </strong>
           [ <a href="http://apache.org/dyn/closer.cgi/geode/1.2.0/apache-geode-1.2.0.zip">ZIP</a>, <a href="https://dist.apache.org/repos/dist/release/geode/1.2.0/apache-geode-1.2.0.zip.sha256">SHA-256</a>,
           <a href="https://dist.apache.org/repos/dist/release/geode/1.2.0/apache-geode-1.2.0.zip.asc">PGP</a> ] -
           [<a href="http://apache.org/dyn/closer.cgi/geode/1.2.0/apache-geode-1.2.0.tar.gz">TAR.GZ</a>, <a href="https://dist.apache.org/repos/dist/release/geode/1.2.0/apache-geode-1.2.0.tar.gz.sha256">SHA-256</a>,
           <a href="https://dist.apache.org/repos/dist/release/geode/1.2.0/apache-geode-1.2.0.tar.gz.asc">PGP</a> ]
         </span><br/>
         <!-- SOURCE -->
-        <span class="icon-cloud-download"> <strong>Source</strong>
+        <span> <strong>Source</strong>
            [ <a href="http://apache.org/dyn/closer.cgi/geode/1.2.0/apache-geode-src-1.2.0.zip">ZIP</a>, <a href="https://dist.apache.org/repos/dist/release/geode/1.2.0/apache-geode-src-1.2.0.zip.sha256">SHA-256</a>,
            <a href="https://dist.apache.org/repos/dist/release/geode/1.2.0/apache-geode-src-1.2.0.zip.asc">PGP</a>
             ] -
@@ -164,7 +164,7 @@ under the License. -->
            ]
          </span><br/>
         <!-- Examples -->
-        <span class="icon-cloud-download"> <strong>Examples</strong>
+        <span> <strong>Examples</strong>
            [ <a href="http://apache.org/dyn/closer.cgi/geode/1.2.0/geode-examples-1.2.0.zip">ZIP</a>, <a href="https://dist.apache.org/repos/dist/release/geode/1.2.0/geode-examples-1.2.0.zip.sha256">SHA-256</a>,
            <a href="https://dist.apache.org/repos/dist/release/geode/1.2.0/geode-examples-1.2.0.zip.asc">PGP</a>
             ] -
@@ -194,20 +194,20 @@ under the License. -->
         </div>
         <!-- END OF 1.2.0 -->
         <!-- START OF 1.1.1 -->
-        <h3><span class="icon-flag-checkered"> 1.1.1</span></h3>
+        <h3>1.1.1</h3>
         <!-- RELEASE NOTES -->
         <strong><a href="https://cwiki.apache.org/confluence/display/GEODE/Release+Notes#ReleaseNotes-1.1.1">Release Notes</a></strong>
         <p/>
 
         <!-- BINARY -->
-        <span class="icon-cloud-download"> <strong>Binaries </strong>
+        <span> <strong>Binaries </strong>
           [ <a href="http://apache.org/dyn/closer.cgi/geode/1.1.1/apache-geode-1.1.1.zip">ZIP</a>, <a href="https://dist.apache.org/repos/dist/release/geode/1.1.1/apache-geode-1.1.1.zip.sha256">SHA-256</a>,
           <a href="https://dist.apache.org/repos/dist/release/geode/1.1.1/apache-geode-1.1.1.zip.asc">PGP</a> ] -
           [<a href="http://apache.org/dyn/closer.cgi/geode/1.1.1/apache-geode-1.1.1.tar.gz">TAR.GZ</a>, <a href="https://dist.apache.org/repos/dist/release/geode/1.1.1/apache-geode-1.1.1.tar.gz.sha256">SHA-256</a>,
           <a href="https://dist.apache.org/repos/dist/release/geode/1.1.1/apache-geode-1.1.1.tar.gz.asc">PGP</a> ]
         </span><br/>
         <!-- SOURCE -->
-        <span class="icon-cloud-download"> <strong>Source</strong>
+        <span> <strong>Source</strong>
            [ <a href="http://apache.org/dyn/closer.cgi/geode/1.1.1/apache-geode-src-1.1.1.zip">ZIP</a>, <a href="https://dist.apache.org/repos/dist/release/geode/1.1.1/apache-geode-src-1.1.1.zip.sha256">SHA-256</a>,
            <a href="https://dist.apache.org/repos/dist/release/geode/1.1.1/apache-geode-src-1.1.1.zip.asc">PGP</a>
             ] -
