--- a/releases/index.html
+++ b/releases/index.html
@@ -287,7 +287,7 @@ under the License. -->
 
         
       </div>
-      <p>If you need access to older releases they can be found in the <a target="_blank" href="https://archive.apache.org/dist/incubator/geode/">release archives</a>.</p>
+      <p>If you need access to older releases they can be found in the <a target="_blank" href="https://archive.apache.org/dist/geode/">release archives</a>.</p>
       <!-- END OF RELEASE -->
       <hr/>
         <p>
