--- a/website/content/community/index.html
+++ b/website/content/community/index.html
@@ -71,8 +71,8 @@ under the License. -->
 		</div>
     <div class="row">
       <div class="col-md-4">
-        <a  href="http://www.apache.org/events/current-event.html">
-          <img src="http://www.apache.org/events/current-event-234x60.png"/>
+        <a  href="https://www.apache.org/events/current-event.html">
+          <img src="https://www.apache.org/events/current-event-234x60.png"/>
         </a>
       </div>
     	<div class="col-md-4">
