--- a/community/index.html
+++ b/community/index.html
@@ -52,7 +52,7 @@
 </script>
 <!-- end google analytics -->
 
-    
+
     <script type="text/javascript"
       src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBYSxyIKS22zC4wSLFXZGR8QKXbGWLFwYw&sensor=false">
     </script>
@@ -221,7 +221,7 @@
             }
         };
     </script>
-    
+
 
     <!-- HTML5 shim, for IE6-8 support of HTML5 elements. All other JS at the end of file. -->
     <!--[if lt IE 9]>
@@ -331,8 +331,8 @@ under the License. -->
 		</div>
     <div class="row">
       <div class="col-md-4">
-        <a  href="http://www.apache.org/events/current-event.html">
-          <img src="http://www.apache.org/events/current-event-234x60.png"/>
+        <a  href="https://www.apache.org/events/current-event.html">
+          <img src="https://www.apache.org/events/current-event-234x60.png"/>
         </a>
       </div>
     	<div class="col-md-4">
@@ -622,4 +622,3 @@ under the License. -->
 
 </body>
 </html>
-
